fixa så spille er smudere

--- a/Game 1.0/style.css
+++ b/Game 1.0/style.css
@@ -32,8 +32,8 @@ body {
 	position:absolute;
 	top:0;
 	left:375px;
-	width:50px;
-	height:75px;
+	width:100px;
+	height:10px;
 	background-color:brown;
 	z-index:5;
 }
